# Work-Persea-Social

order-processing-system/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  init.sql  verify_system.ps1  verify_system.py
order-processing-system/inventory-service/: docker_entrypoint.py  main.py  pyproject.toml  seed.py
order-processing-system/inventory-service/alembic/: env.py
order-processing-system/inventory-service/api/: __init__.py  routes.py
order-processing-system/inventory-service/application/: __init__.py  inventory_service.py
order-processing-system/notification-service/: Dockerfile  docker_entrypoint.py  main.py  pyproject.toml
order-processing-system/notification-service/api/: __init__.py  routes.py
order-processing-system/notification-service/application/: __init__.py  notification_service.py
order-processing-system/notification-service/domain/: __init__.py  events.py
order-processing-system/notification-service/infrastructure/: __init__.py  message_queue.py
order-processing-system/notification-service/tests/: __init__.py  test_notification_service.py
order-processing-system/order-service/: Dockerfile  alembic.ini  main.py  pyproject.toml
order-processing-system/payment-service/: Dockerfile  alembic.ini  docker_entrypoint.py  main.py  pyproject.toml
order-processing-system/payment-service/alembic/versions/: .keep  00b78785e905_final.py
order-processing-system/payment-service/api/: __init__.py  routes.py
order-processing-system/payment-service/application/: __init__.py  payment_service.py
order-processing-system/payment-service/domain/: __init__.py  events.py  models.py
order-processing-system/payment-service/infrastructure/: __init__.py  database.py  message_queue.py  repository.py
order-processing-system/payment-service/tests/: __init__.py  test_payment_service.py
order-processing-system/scripts/: _nulls_out.txt  convert_init_encoding.py  find_nulls.py  inspect_bytes.py
(+22 files in other folders)
